2007-04-07 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement _ -> (any character) to OCR suggestions 

2007-03-28 Harri Pitkänen <hatapitk@iki.fi>

	* Update to Automake 1.10
	* Update version information for version 1.4
	* Avoid using rule based hyphenator with certain strings containing
	  numbers and special characters

2007-02-26 Harri Pitkänen <hatapitk@iki.fi>

	* Fix the option VOIKKO_INTERSECT_COMPOUND_LEVEL, which only worked
	  correctly with values 0 and 1. Bug report and suggested fix by
	  Kalle Lampila.
	* Add option intersect_compound_level=n to voikkohyphenate

2007-02-16 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement b <-> h to OCR suggestions

2007-02-14 Harri Pitkänen <hatapitk@iki.fi>

	* New command line option -x for voikkospell, from a slightly
	  modified patch by Hannu Väisänen
	* Try replacing 0 with o when generating OCR suggestions

2007-02-09 Harri Pitkänen <hatapitk@iki.fi>

	* Fix broken suggestions for words with non-default capitalisation
	* No longer leak iconv handles when library initialisation fails
	* Increase version to 1.3.1

2007-01-28 Harri Pitkänen <hatapitk@iki.fi>

	* Fix character set conversion on Windows

2007-01-27 Harri Pitkänen <hatapitk@iki.fi>

	* Fix typo in voikko_hyphenate.h

2007-01-26 Harri Pitkänen <hatapitk@iki.fi>

	* Add new option VOIKKO_MIN_HYPHENATED_WORD_LENGTH.
	* Remove empty TODO.

2007-01-25 Harri Pitkänen <hatapitk@iki.fi>

	* Add some more hyphenation points when VOIKKO_OPT_NO_UGLY_HYPHENATION
	  is not set.

2007-01-20 Harri Pitkänen <hatapitk@iki.fi>

	* Add a word length check to voikko_split_compounds.
	* Fixes to documentation.

2007-01-16 Harri Pitkänen <hatapitk@iki.fi>

	* Support explicitly specified string lengths as opposed to only
	  allowing null terminated strings in certain utility functions.
	* VOIKKO_OPT_IGNORE_DOT is now respected during hyphenation as well,
	  and corresponding option is supported by voikkohyphenate. This