@@ -1,3 +1,9 @@
+2007-04-19 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Check for embedded dots in URL detection
+	* Only use URL and number detection when
+	  VOIKKO_OPT_NO_UGLY_HYPHENATION is set
+
 2007-04-07 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add replacement _ -> (any character) to OCR suggestions 
